--- a/Geographic NER.ipynb
+++ b/Geographic NER.ipynb
@@ -30,6 +30,10 @@
    "source": [
     "import os\n",
     "import json\n",
+    "import nltk\n",
+    "import certifi\n",
+    "import ssl\n",
+    "import time\n",
     "import pandas as pd\n",
     "import tika.tika\n",
     "from tika import parser"
@@ -195,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,24 +238,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2020-03-23 01:04:23,668 [MainThread  ] [WARNI]  Failed to see startup log message; retrying...\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'Content-Encoding': 'ISO-8859-1', 'Content-Type': 'text/plain; charset=ISO-8859-1', 'X-Parsed-By': ['org.apache.tika.parser.DefaultParser', 'org.apache.tika.parser.csv.TextAndCSVParser'], 'X-TIKA:content_handler': 'ToTextContentHandler', 'X-TIKA:embedded_depth': '0', 'X-TIKA:parse_time_millis': '214', 'resourceName': \"b'polar.geot'\"}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "tika.tika.TikaServerClasspath = '/Users/anastasia/geotopicparser-utils/mime:/Users/anastasia/geotopicparser-utils/models/polar:/Users/anastasia/geotopic-mime/tika-config.xml'\n",
     "parsed = parser.from_file(home + '/geotopicparser-utils/geotopics/polar.geot')\n",
@@ -261,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,31 +335,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "from geopy import geocoders \n",
+    "import geopy.geocoders\n",
     "from geopy.geocoders import Nominatim\n",
+    "from geopy.extra.rate_limiter import RateLimiter\n",
     "\n",
     "def get_lat_lon(data):\n",
+    "    ctx = ssl.create_default_context(cafile=certifi.where())\n",
+    "    geopy.geocoders.options.default_ssl_context = ctx\n",
     "    gn = geocoders.GeoNames(username=\"anastasija\")\n",
-    "    geolocator = Nominatim(user_agent=\"anastasija\", timeout=10)\n",
+    "    geolocator = Nominatim(user_agent=\"anastasija\", timeout=10, scheme='http')\n",
+    "    geoc = RateLimiter(geolocator.geocode, min_delay_seconds=2)\n",
     "    for paper in data:\n",
     "        for loc in data[paper]:\n",
     "            for place in data[paper][loc]:\n",
     "                count = data[paper][loc][place]\n",
     "                data[paper][loc][place] = {}\n",
-    "                location = geolocator.geocode(place)\n",
-    "                data[paper][loc][place]['lat'] = location.latitude\n",
-    "                data[paper][loc][place]['lon'] = location.longitude\n",
+    "                try:\n",
+    "                    location = geolocator.geocode(place)\n",
+    "                    data[paper][loc][place]['lat'] = location.latitude\n",
+    "                    data[paper][loc][place]['lon'] = location.longitude\n",
+    "                except:\n",
+    "                    pass\n",
     "                data[paper][loc][place]['mentioned'] = count\n",
+    "                time.sleep(0.5)\n",
     "    return data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,11 +396,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('geo.json', 'w') as fp:\n",
+    "with open('./geodata/geo.json', 'w') as fp:\n",
     "    json.dump(geodata_final, fp, indent=4)"
    ]
   },
